test/zinc_source/compile_errors/operators/03_bool_xor.zn
// expected-error: operator '\^' requires integer operands

fn main() {
    bad = true ^ false
}
